Gallery overflow fix

--- a/css/app.css
+++ b/css/app.css
@@ -1764,6 +1764,9 @@ header .menu-button {
 	.gallery-page .one-col{
 		width:100%;
 	}
+	.gallery-page main{
+		overflow: visible;
+	}
 	header .nav ul {
 		display: none !important;
 	}
